# lar_simulation

./: Dockerfile  README.md  environment.yml  environment_full.yml  pyproject.toml
docs/: MM3 Argon Simulation (Juan Cardenas).docx
scripts/: argon_simulation.py  argon_simulation_Juan_Cardenas.py  argon_simulation_Juan_Cardenas_GPU_trial.py  argon_simulation_no_force.py  create_movie_example.py  cube-root-codes.py  main.py  parallel_process_ex.py  simulate.py
src/lar_simulation/: __init__.py  calculations.py  core_simulation.py  create_objects.py  metrics.py  simulation_methods.py  starting_banner.py
src/lar_simulation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/liquid_argon_simulation.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_create_shpheres_grid.py  test_nbody.py  test_simulation_start_end_announcement.py
