[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lar_simulation"
version = "0.1.0"
description = "A project that will simulate solid and liquid argon"
authors = [
  { name = "Juan Cardenas", email = "cardenas.juan5453@gmail.com" }
]
requires-python = ">=3.8"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]


[project.scripts]
run-something = "lar_simulation.starting_banner:main"
